# likeness-bench

./: .env.example  .gitignore  Makefile  README.md  bench.toml  conftest.py  pyproject.toml  showcase.html
bench/: __init__.py  cli.py  config.py  logging.py  models.py  registry.py
bench/providers/: __init__.py  _vision_utils.py  anthropic_provider.py  arcface_provider.py  base.py  google_provider.py  mock_provider.py  openai_provider.py  openrouter_fal_provider.py
bench/runner/: __init__.py  checkpoint.py  control.py  cost.py  dataset.py  parsing.py  pipeline.py
bench/scoring/: __init__.py  composite.py  intervals.py  metrics.py
bench/server/: app.py
bench/tasks/: __init__.py  base.py  mcq_likeness.py
bench/utils/: storage.py
benchmarks/likeness_v2/: manifest.json
dataset/likeness_v2/: dataset.json
likeness/: __init__.py  orchestrator.py  orchestrator_v2.py
likeness/composition/: mcq_builder.py
likeness/generation/: gpt_image2_edit.py  nb2_client.py  openrouter_vision.py  prompts.py
results/likeness_v2/: arcface__20260508T140351_arcface_likeness_v2_7f5cfdc9.json  claude-opus-4-6__20260508T134147_claude-opus-4-6_likeness_v2_836007ce.json  claude-opus-4-7__20260508T134001_claude-opus-4-7_likeness_v2_fb032729.json  gemini-3-flash__20260508T134232_gemini-3-flash_likeness_v2_2ec0eb1c.json  gpt-5_5__20260508T134530_gpt-5_5_likeness_v2_b9f4f2a6.json  index.json  (+2 more)
scripts/: build_dataset.py  build_dataset_v2.py  build_fixture.py  build_showcase.py  run_all_models.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+131 files in other folders)
