[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "likeness-detector"
version = "0.1.0"
description = "Likeness detection benchmark for vision-language models"
requires-python = ">=3.11"
authors = [{name = "Likeness Detector"}]
license = {text = "MIT"}
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.5",
    "httpx>=0.27",
    "Pillow>=10.4",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "jinja2>=3.1",
    "rich>=13.7",
    "scipy>=1.13",
    "numpy>=1.26",
]

[project.optional-dependencies]
providers = [
    "openai>=1.51",
    "anthropic>=0.34",
    "google-generativeai>=0.7",
]
dataset = [
    "fal-client>=0.5",
    "insightface>=0.7.3",
    "onnxruntime>=1.18",
    "faiss-cpu>=1.8",
    "opencv-python>=4.10",
    "kaggle>=1.6",
    "streamlit>=1.36",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "respx>=0.21",
]

[project.scripts]
bench = "bench.cli:app"

[tool.setuptools.packages.find]
include = ["bench*", "likeness*"]
exclude = ["tests*", "web*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
